--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                            h2{color: rgb(201, 207, 207);}
                            h6{color:#262626;}
                         </style>
-                        <h2 class=" mx-auto mt-2 mb-5">The right Developer for your business.</h2>
+                        <h2 class=" mx-auto mt-2 mb-5">The right Developer for you.</h2>
                         <a class="btn btn-primary" href="#about">Get Started</a>
                         <h6 class=" mx-auto mt-2 mb-5">The right Developer for your business.</h6>
                 </div>
